Fix list header not alignment.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -60,4 +60,5 @@
   align-self: center;
   display: flex;
   justify-content: space-around;
+  width: 180px;
 }
